# libdot

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  dot.h  libdot.pc.in
doc/: Application Programming Interface.rst  Introduction.rst  Makefile  The DOT language.rst  Unit tests.rst  conf.py  index.rst
parser/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  parser.1  parser.cc  parser.info  parser.lsm.in  parser.spec.in  parser.texi  system.h  xmalloc.c
parser/examples/: graph1.dot  graph3.dot  graph4.dot
src/: DOTdefs.h  DOTparser.cc  DOTparser.h
tests/: TSTdefs.h  TSThelperfunctions.cc  TSThelperfunctions.h  TSTparser.cc  gtest.cc
tests/examples/: example-1.dot  example-2.dot  example-3.dot  example-4.dot  example-5a.dot  example-5b.dot  example-7.dot
